<resources>
    <string name="app_name">PayPer Book</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_city">City</string>
    <string name="prompt_password">Password</string>
    <string name="gender">Gender</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_user_id">User Name</string>
    <string name="register_head">Register Me..!!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>

    <!--rupee-->
    <string name="rupee">₹</string>

    <!--question mark-->
    <string name="question">[\?]</string>

    <!--share book tips-->
    <string-array name="share_tips">
        <item>EXACT TITLE ENSURES THAT A SEEKER FINDS THE RIGHT BOOK</item>
        <item>A SEEKER MAY FIND THE BOOK BY ITS PUBLISHER</item>
        <item>RIGHT RENT = RIGHT SEEKERS</item>
    </string-array>
</resources>
